apps/controller/controller-nginx-manifests/non-prod/templates/i-atlantis-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis-ingress
  namespace: infra
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: atlantis-non-prod
            port:
              number: 80
    host: infra.polarpoint.io
  tls:
  - hosts:
    - infra.polarpoint.io
    secretName: nginx-ssl-atlantis
